--- a/css/pages/editor.css
+++ b/css/pages/editor.css
@@ -80,7 +80,7 @@
    ========================= */
 .editor-card textarea {
   border: none;
-  padding: 0;
+  padding: 24px 0 0 0;
   margin: 0;
 
   min-height: 160px;
